Fix z-index

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -785,7 +785,6 @@ a {
   }
 }
 #navigation {
-  z-index: -1;
   width: $navigation-width;
   overflow-x: hidden;
   height: 100%;
